cmake_minimum_required(VERSION 3.13)
project(test)

set(CMAKE_CXX_STANDARD 14)

add_executable(test main.cpp 数学/数论/POJ1006.cpp 水题/POJ1003.cpp 水题/POJ1004.cpp 水题/POJ1005.cpp 水题/POJ1207.cpp 水题/POJ3299.cpp 水题/POJ2159.cpp 水题/POJ1083.cpp 水题/POJ3094.cpp 算法I/枚举/POJ1753.cpp 算法I/枚举/POJ2965.cpp 算法I/贪心/POJ1328.cpp 算法I/贪心/POJ2586.cpp 算法I/构造法/POJ3295.cpp 算法I/构造法/POJ3239.cpp 算法I/模拟/POJ1008.cpp 算法I/高精度/POJ1001.cpp 图论/图遍历/POJ2255.cpp 图论/最短路/POJ1860.cpp 图论/最小生成树/POJ1789.cpp 图论/拓扑排序/POJ1094.cpp 图论/最短路/POJ1062.cpp 图论/二分图/POJ3041.cpp 图论/最短路/POJ2253.cpp)